--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,14 @@
 h1 {
-  color: blue;
+  color: red;
 }
 
 h2 {
   font-style: italic;
-  text-align: center;
+}
+
+h3 {
+  font-style: bold;
+  font-family: sans-serif;
 }
 
 p {
@@ -12,6 +16,13 @@ p {
 }
 
 ul {
-  font-size: 20px;
-  line-height: 30px;
+  font-family: sans-serif;
+  font-size: 16px;
+  line-height: 25px;
+}
+
+ol {
+  font-family: sans-serif;
+  font-size: 16px;
+  line-height: 25px;
 }
