linked styles2.css to favorite-things webpage and added pictures of pets

--- a/css/styles2.css
+++ b/css/styles2.css
@@ -29,3 +29,10 @@ ul {
   line-height: 25px;
 }
 
+ol {
+  color: darkolivegreen;
+  font-family: sans-serif;
+  font-size: 16px;
+  line-height: 25px;
+}
+
